<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ParrentStyle"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ParrentStyle"
        android:backgroundTint="#35DDCF"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            style="@style/TextViewStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/cost_of_service"
            style="@style/EditTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <TextView
            android:id="@+id/service_question"
            style="@style/ServiceQuestionTextViewStyle"
            android:text="@string/how_was_the_service"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cost_of_service" />

        <RadioGroup
            android:id="@+id/tip_options"
            style="@style/RadioGroupStyle"
            android:background="@drawable/radio_group_background"
            android:checkedButton="@id/option_twenty_percent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/service_question">

            <RadioButton
                android:id="@+id/option_twenty_percent"
                style="@style/RadioButtonStyle"
                android:text="@string/amazing_service" />

            <RadioButton
                android:id="@+id/option_eighteen_percent"
                style="@style/RadioButtonStyle"
                android:text="@string/good_service" />

            <RadioButton
                android:id="@+id/option_fifteen_percent"
                style="@style/RadioButtonStyle"
                android:text="@string/ok_service" />

            <RadioButton
                android:id="@+id/option_ten_percent"
                style="@style/RadioButtonStyle"
                android:text="@string/normal_service" />

            <RadioButton
                android:id="@+id/option_five_percent"
                style="@style/RadioButtonStyle"
                android:text="@string/poor_service" />

        </RadioGroup>

        <Switch
            android:id="@+id/round_up_switch"
            style="@style/SwitchStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/tip_options"
            app:layout_constraintTop_toBottomOf="@id/tip_options" />


        <Button
            android:id="@+id/calculate_button"
            style="@style/ButtonStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:cornerRadius="0dp"
            app:layout_constraintTop_toBottomOf="@id/round_up_switch" />


        <TextView
            android:id="@+id/tip_result"
            style="@style/TipResultTextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculate_button" />

        <ImageView
            android:id="@+id/imageView"
            style="@style/ImageViewStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tip_result"
            app:srcCompat="@drawable/myimage" />


        <LinearLayout
            android:id="@+id/buttonContainer"
            style="@style/ButtonContainerStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:layout_constraintVertical_bias="0.5">


            <Button
                android:id="@+id/btnEnglish"
                style="@style/ButtonStyle2"
                android:text="English" />

            <Button
                android:id="@+id/btnIndonesian"
                style="@style/ButtonStyle2"
                android:text="Indonesian" />

            <Button
                android:id="@+id/btnJapanese"
                style="@style/ButtonStyle2"
                android:text="Japanese" />

        </LinearLayout>

        <Button
            android:id="@+id/answer_of_calculate"
            style="@style/ServicePayment"
            android:text="@string/service_payment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:cornerRadius="0dp"
            app:layout_constraintTop_toBottomOf="@id/buttonContainer" />

        <ImageView
            android:id="@+id/imageView2"
            style="@style/ImageViewStyle"
            app:srcCompat="@drawable/invoice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/answer_of_calculate"
            app:layout_constraintVertical_bias="0.5"

            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
